--- a/Dockerfile_xBookworm
+++ b/Dockerfile_xBookworm
@@ -134,6 +134,15 @@ RUN apt-get update && \
     tigervnc-standalone-server && \
     # tigervnc-common && \
     # tigervnc-tools && \
+    xterm && \
+    /cleanup
+
+# tigervncserver -xstartup /usr/bin/xterm -geometry 800x600 -localhost no :1
+
+
+RUN apt-get update && \
+    # env DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+    env DEBIAN_FRONTEND=noninteractive apt-get install -y  \
     iproute2 && \
     /cleanup
 
